--- a/map.html
+++ b/map.html
@@ -6,12 +6,26 @@
     <title>Search Results||GMOH</title>
     <script src='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.js'></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css' rel='stylesheet'/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="style.css" rel="stylesheet"/>
 </head>
 <body>
-    <div id='map' style='width: auto; height: 300px;'></div>
-</body>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"></script>
+    <nav>
+        <div class="nav-wrapper">
+            <a href="#" class="brand-logo">Get Out Me Out of here!</a>
+            <ul id="nav-mobile" class="right hide-on-med-and-down">
+                <li><a href="search.html">Locator</a></li>
+                <li><a href="map.html">Map View</a></li>
+                <li><a href="results.html">Your Places</a></li>
+            </ul>
+        </div>
+    </nav>
+        <div id='map'></div>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.js"
+    integrity="sha512-m2PhLxj2N91eYrIGU2cmIu2d0SkaE4A14bCjVb9zykvp6WtsdriFCiXQ/8Hdj0kssUB/Nz0dMBcoLsJkSCto0Q=="
+    crossorigin="anonymous"></script>
 <script src="logic.js"></script>
+</body>
 </html>
