--- a/search.html
+++ b/search.html
@@ -1,10 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="stylesheet" href="style.css">
     <title>Welcome||GMOH</title>
 </head>
+
 <body>
+    <nav>
+        <div class="nav-wrapper">
+            <a href="#" class="brand-logo">Get Out Me Out of here!</a>
+            <ul id="nav-mobile" class="right hide-on-med-and-down">
+                <li><a href="search.html">Locator</a></li>
+                <li><a href="map.html">Map View</a></li>
+                <li><a href="results.html">Your Places</a></li>
+            </ul>
+        </div>
+    </nav>
+    <div class="card">
+        <div class="card-image waves-effect waves-block waves-light col 8">
+            <img class="activator" src="images/pngegg.png" alt="Hiker image">
+        </div>
+        <div class="card-content">
+            <p>
+            <div class="col 4"></div>
+            <a class='dropdown-trigger btn' href='#' data-target='dropdown1'>Drop Me!</a>
+            <ul id='dropdown1' class='dropdown-content'>
+                <li><a href="#!">Parks</a></li>
+                <li><a href="#!">Hiking</a></li>
+                <li><a href="#!">Camping</a></li>
+                <li class="divider" tabindex="-1"></li>
+            </ul>
+        </div>
+    </p>
+    </div>
+    </div>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.js"
+    integrity="sha512-m2PhLxj2N91eYrIGU2cmIu2d0SkaE4A14bCjVb9zykvp6WtsdriFCiXQ/8Hdj0kssUB/Nz0dMBcoLsJkSCto0Q=="
+    crossorigin="anonymous"></script>
+<script src="logic.js"></script>
 </body>
+
 </html>
