Did small changes and messed with bg-color and txt

--- a/results.html
+++ b/results.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
+    <title>Results || GMOH</title>
 </head>
 <body>
     <nav>
         <div class="nav-wrapper">
-            <a href="#" class="brand-logo">Get Out Me Out of here!</a>
+            <a href="#" class="brand-logo"><i class="fas fa-hiking"></i></a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li><a href="search.html">Locator</a></li>
                 <li><a href="map.html">Map View</a></li>
