--- a/search.html
+++ b/search.html
@@ -6,36 +6,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="style.css">
-    <title>Welcome||GMOH</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
+    <title>Welcome || GMOH</title>
 </head>
 
 <body>
     <nav>
-        <div class="nav-wrapper">
-            <a href="#" class="brand-logo">Get Out Me Out of here!</a>
-            <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="search.html">Locator</a></li>
-                <li><a href="map.html">Map View</a></li>
-                <li><a href="results.html">Your Places</a></li>
-            </ul>
+        <div class="nav-wrapper light-blue lighten-1">
+            <div class="container black-text">
+                <a href="#" class="black-text brand-logo"><i class="fas fa-hiking fa-lg"> Get Me Outta Here</i></a>
+                <ul id="nav-mobile" class="right hide-on-med-and-down">
+                    <li><a href="search.html" class="black-text">Locator</a></li>
+                    <li><a href="map.html" class="black-text">Map View</a></li>
+                    <li><a href="results.html" class="black-text">Your Places</a></li>
+                </ul>
+            </div>
         </div>
     </nav>
     <div class="card">
-        <div class="card-image waves-effect waves-block waves-light col 8">
-            <img class="activator" src="images/pngegg.png" alt="Hiker image">
-        </div>
         <div class="card-content">
             <p>
-            <div class="col 4"></div>
-            <a class='dropdown-trigger btn' href='#' data-target='dropdown1'>Drop Me!</a>
-            <ul id='dropdown1' class='dropdown-content'>
-                <li><a href="#!">Parks</a></li>
-                <li><a href="#!">Hiking</a></li>
-                <li><a href="#!">Camping</a></li>
-                <li class="divider" tabindex="-1"></li>
-            </ul>
+            <div class="container">
+                <a class='dropdown-trigger btn right light-blue lighten-1 black-text' href='#' data-target='dropdown1'>Choose Your Destination Type</a>
+                <ul id='dropdown1' class='dropdown-content'>
+                    <li><a href="#!">Parks</a></li>
+                    <li><a href="#!">Hiking</a></li>
+                    <li><a href="#!">Camping</a></li>
+                    <li class="divider" tabindex="-1"></li>
+                </ul>
+            </p>
+            </div>
+            <div class="card-image waves-effect waves-block waves-light">
+                <img class="activator" src="images/pngegg.png" alt="Hiker image">
+            </div>
         </div>
-    </p>
     </div>
     </div>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"
@@ -45,5 +49,4 @@
     crossorigin="anonymous"></script>
 <script src="logic.js"></script>
 </body>
-
 </html>
