--- a/map.html
+++ b/map.html
@@ -12,16 +12,18 @@
 </head>
 <body>
     <nav>
-        <div class="nav-wrapper">
-            <a href="#" class="brand-logo"><i class="fas fa-hiking"></i></a>
-            <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="search.html">Locator</a></li>
-                <li><a href="map.html">Map View</a></li>
-                <li><a href="results.html">Your Places</a></li>
-            </ul>
+        <div class="nav-wrapper light-blue lighten-1">
+            <div class="container black-text">
+                <a href="#" class="black-text brand-logo"><i class="fas fa-hiking fa-lg"> Get Me Outta Here</i></a>
+                <ul id="nav-mobile" class="right hide-on-med-and-down">
+                    <li><a href="search.html" class="black-text">Locator</a></li>
+                    <li><a href="map.html" class="black-text">Map View</a></li>
+                    <li><a href="results.html" class="black-text">Your Places</a></li>
+                </ul>
+            </div>
         </div>
     </nav>
-        <div id='map'></div>
+        <div id="map"></div>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.js"
