--- a/results.html
+++ b/results.html
@@ -4,21 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <script src='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.js'></script>
+    <link href='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css' rel='stylesheet'/>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
     <title>Results || GMOH</title>
 </head>
 <body>
     <nav>
-        <div class="nav-wrapper">
-            <a href="#" class="brand-logo"><i class="fas fa-hiking"></i></a>
-            <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="search.html">Locator</a></li>
-                <li><a href="map.html">Map View</a></li>
-                <li><a href="results.html">Your Places</a></li>
-            </ul>
+        <div class="nav-wrapper light-blue lighten-1">
+            <div class="container black-text">
+                <a href="#" class="black-text brand-logo"><i class="fas fa-hiking fa-lg"> Get Me Outta Here</i></a>
+                <ul id="nav-mobile" class="right hide-on-med-and-down">
+                    <li><a href="search.html" class="black-text">Locator</a></li>
+                    <li><a href="map.html" class="black-text">Map View</a></li>
+                    <li><a href="results.html" class="black-text">Your Places</a></li>
+                </ul>
+            </div>
         </div>
     </nav>
+    <div class="col s7">
+        <div class="row" id="current-weather">
+            <div class="col s7">
+                <h3><span id="current-city" class="col s7"></span><img id="weather-img" src=""></h3>
+                <p>Temperature: <span id="temperature"></span></p>
+                <p>Humidity: <span id="humidity"></span></p>
+                <p>Wind Speed: <span id="windspeed"></span></p>
+            </div>
+        </div>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.js"
