--- a/results.html
+++ b/results.html
@@ -23,15 +23,23 @@
             </div>
         </div>
     </nav>
-    <div class="col s7">
-        <div class="row" id="current-weather">
-            <div class="col s7">
-                <h3><span id="current-city" class="col s7"></span><img id="weather-img" src=""></h3>
-                <p>Temperature: <span id="temperature"></span></p>
-                <p>Humidity: <span id="humidity"></span></p>
-                <p>Wind Speed: <span id="windspeed"></span></p>
+    <div class="card">
+        <div class="card-content">
+            <p>
+            <div class="container">
+                <div class="col s7">
+                    <div class="row" id="current-weather">
+                        <div class="col s7">
+                            <h3><span id="current-city" class="col s7"></span><img id="weather-img" src=""></h3>
+                            <p><h3>Temperature: </h3><span id="temperature"></span></p>
+                            <p><h3>Humidity: </h3><span id="humidity"></span></p>
+                            <p><h3>Wind Speed: </h3><span id="windspeed"></span></p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
+    </div>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.js"
