--- a/results.html
+++ b/results.html
@@ -23,28 +23,19 @@
             </div>
         </div>
     </nav>
-    <div class="card">
-        <div class="card-content">
-            <p>
-            <div class="container">
-                <div class="col s7">
-                    <div class="row" id="current-weather">
-                        <div class="col s7">
-                            <h3><span id="current-city" class="col s7"></span><img id="weather-img" src=""></h3>
-                            <p><h3>Temperature: </h3><span id="temperature"></span></p>
-                            <p><h3>Humidity: </h3><span id="humidity"></span></p>
-                            <p><h3>Wind Speed: </h3><span id="windspeed"></span></p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <div class="container">
+        <p><h5>Temperature: </h5><span id="temperature"></span></p>
+        <p><h5>Location: </h5><span id="location"></span></p>
+        <p><h5>Description: </h5><span id="description"></span></p>
     </div>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.js"
     integrity="sha512-m2PhLxj2N91eYrIGU2cmIu2d0SkaE4A14bCjVb9zykvp6WtsdriFCiXQ/8Hdj0kssUB/Nz0dMBcoLsJkSCto0Q=="
     crossorigin="anonymous"></script>
-<script src="logic.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.0/moment.min.js"
+    integrity="sha512-Izh34nqeeR7/nwthfeE0SI3c8uhFSnqxV0sI9TvTcXiFJkMd6fB644O64BRq2P/LA/+7eRvCw4GmLsXksyTHBg=="
+    crossorigin="anonymous"></script>
+<script src="weather.js"></script>
 </body>
 </html>
